--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
